k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: xview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: app.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ui
            port: 
              number: 80
      - path: /batch_predict
        pathType: Prefix
        backend:
          service:
            name: infer
            port:
              number: 9000
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: infer
            port:
              number: 9000
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: infer
            port:
              number: 9000
